cabal-version:      3.0
name:               network-arbitrary
version:            0.7.0.0
license:            MIT
license-file:       LICENSE
copyright:          (c) 2018 Alex Brandt
author:             Alex Brandt
maintainer:         alunduil@gmail.com
stability:          stable
homepage:           https://github.com/alunduil/network-arbitrary
bug-reports:        https://github.com/alunduil/network-arbitrary/issues
synopsis:           Arbitrary Instances for Network Types
description:
  You can use network-arbitrary to provide Arbitrary instances for Network
  module types.

category:           Testing
tested-with:        GHC >=7.6 && <8.2.1 || >8.2.1 && <9.0
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/alunduil/network-arbitrary

library
  exposed-modules:
    Network.Arbitrary
    Network.HTTP.Media.MediaType.Arbitrary
    Network.HTTP.Types.Method.Arbitrary
    Network.URI.Arbitrary

  other-modules:
  build-depends:
    , base         >=4.6  && <4.15
    , bytestring   >=0.10 && <0.11
    , http-media   >=0.6  && <0.9
    , http-types   >=0.9  && <0.13
    , network-uri  >=2.6  && <2.8
    , QuickCheck   >=2.9  && <2.15

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

  if impl(ghc >=8)
    ghc-options: -Wcompat

  else
    ghc-options:
      -fwarn-monomorphism-restriction -fwarn-tabs -fwarn-unused-do-bind

test-suite test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  build-depends:
    , base              >=4.6  && <4.15
    , bytestring        >=0.10 && <0.11
    , case-insensitive  >=1.2  && <1.3
    , hspec             >=2.4  && <2.8
    , http-media        >=0.6  && <0.9
    , http-types        >=0.9  && <0.13
    , network-uri       >=2.6  && <2.8
    , QuickCheck        >=2.9  && <2.15
    , test-invariant    >=0.4  && <0.5

  build-tool-depends: hspec-discover:hspec-discover >=2.4 && <2.8
  other-modules:
    Network.HTTP.Media.MediaType.Arbitrary
    Network.HTTP.Media.MediaType.ArbitrarySpec
    Network.HTTP.Types.Method.Arbitrary
    Network.HTTP.Types.Method.ArbitrarySpec
    Network.URI.Arbitrary
    Network.URI.ArbitrarySpec

  hs-source-dirs:     src test
  default-language:   Haskell2010
  ghc-options:        -Wall

  if impl(ghc >=8)
    ghc-options: -Wcompat

  else
    ghc-options:
      -fwarn-monomorphism-restriction -fwarn-tabs -fwarn-unused-do-bind
