cabal-version:      3.0
name:               network-arbitrary
version:            0.7.0.0
license:            MIT
license-file:       LICENSE
copyright:          (c) 2018 Alex Brandt
author:             Alex Brandt
maintainer:         alunduil@gmail.com
stability:          stable
homepage:           https://github.com/alunduil/network-arbitrary
bug-reports:        https://github.com/alunduil/network-arbitrary/issues
synopsis:           Arbitrary Instances for Network Types
description:
  You can use network-arbitrary to provide Arbitrary instances for Network
  module types.

category:           Testing
tested-with:
  GHC ==8.6.4 || ==8.6.5 || ==8.8.2 || ==8.8.3 || ==8.8.4 || ==8.10.1 || ==8.10.2 || ==8.10.3 || ==8.10.4 || ==8.10.5 || ==8.10.6 || ==8.10.7 || ==9.0.1 || ==9.0.2 || >=9.2 && <9.3 || >=9.4 && <9.5 || >=9.6 && <9.7 || >=9.8 && <9.9

extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/alunduil/network-arbitrary

common network-arbitrary-common
  build-depends:
    , base         >=4.6  && <4.15 || ^>=4.17.2.1 || ^>=4.18.0.0 || ^>=4.19.1.0
    , bytestring   >=0.10 && <0.11 || ^>=0.12.1.0
    , http-media   >=0.6  && <0.9
    , http-types   >=0.9  && <0.13
    , network-uri  >=2.6  && <2.8
    , QuickCheck   >=2.9  && <2.15

library
  import:           network-arbitrary-common
  exposed-modules:
    Network.Arbitrary
    Network.HTTP.Media.MediaType.Arbitrary
    Network.HTTP.Types.Method.Arbitrary
    Network.URI.Arbitrary

  other-modules:
  build-depends:
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

  if impl(ghc >=8)
    ghc-options: -Wcompat

  else
    ghc-options:
      -fwarn-monomorphism-restriction -fwarn-tabs -fwarn-unused-do-bind

test-suite test
  import:             network-arbitrary-common
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  build-depends:
    , case-insensitive  >=1.2 && <1.3
    , hspec             >=2.4 && <2.8
    , test-invariant    >=0.4 && <0.5

  build-tool-depends: hspec-discover:hspec-discover >=2.4 && <2.8
  other-modules:
    Network.HTTP.Media.MediaType.Arbitrary
    Network.HTTP.Media.MediaType.ArbitrarySpec
    Network.HTTP.Types.Method.Arbitrary
    Network.HTTP.Types.Method.ArbitrarySpec
    Network.URI.Arbitrary
    Network.URI.ArbitrarySpec

  hs-source-dirs:     src test
  default-language:   Haskell2010
  ghc-options:        -Wall

  if impl(ghc >=8)
    ghc-options: -Wcompat

  else
    ghc-options:
      -fwarn-monomorphism-restriction -fwarn-tabs -fwarn-unused-do-bind
